--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alpha | CV, Resume, Portfolio Template </title>
+    <title>NoorElhoda  al Barbary </title>
     <meta name="description" content="my official cv ">
     <meta name="author" content="LionCoders">
     <link rel="icon" href="images\favicon.ico">
